# ctk_visual_builder

./: .gitignore  LICENSE  PYPI_README.md  README.md  RELEASE_CHECKLIST.md  TODO.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.bat
.claude/: settings.json
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: components.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: __init__.py
app/assets/lucide/: categories.json
app/core/: alignment.py  assets.py  autosave.py  colors.py  commands.py  component_paths.py  document.py  event_bus.py  fonts.py  history.py  logger.py  object_references.py  paths.py  platform_compat.py  prefab_paths.py  project.py  project_folder.py  recent_files.py  screen.py  script_paths.py  settings.py  snap.py  variables.py  widget_node.py
app/core/commands/: __init__.py  (+8 more)
app/io/: code_exporter.py  component_assets.py  component_io.py  prefab_io.py  project_loader.py  project_saver.py  scripts.py
app/ui/: _main_window_host.py  add_behavior_field_dialog.py  bug_reporter.py  color_palette_window.py  component_export_choice_dialog.py  component_export_dialog.py  component_import_dialog.py  component_preview_window.py  component_publish_form_dialog.py  component_save_dialog.py  component_var_conflict_dialog.py  component_window_insert_dialog.py  components_panel.py  console_window.py  crash_dialog.py  dark_titlebar.py  dev_test_windows.py  dialog_utils.py  dialogs.py  export_dialog.py  font_picker_dialog.py  handler_delete_dialogs.py  history_window.py  icons.py  image_picker_dialog.py  lucide_icon_picker_dialog.py  main_actions.py  main_documents.py  main_files.py  main_menu.py  main_preview.py  main_shortcuts.py  main_window.py  main_windows.py  managed_window.py  new_project_form.py  object_tree_window.py  palette.py  prefab_save_dialog.py  prefabs_panel.py  (+23 more)
app/utils/: color_history.py  color_picker_dialog.py
app/widgets/: base.py  card.py  circular_progress.py  content_min.py  ctk_button.py  ctk_check_box.py  ctk_combo_box.py  ctk_entry.py  ctk_frame.py  ctk_label.py  ctk_option_menu.py  ctk_progress_bar.py  ctk_radio_button.py  ctk_rich_label.py  ctk_scrollable_frame.py  ctk_segmented_button.py  ctk_slider.py  ctk_switch.py  ctk_tabview.py  ctk_textbox.py  event_registry.py  image.py  layout_schema.py  registry.py  scrollable_dropdown.py  shape.py  window_descriptor.py
ctkmaker/: __init__.py
docs/: DEV_NOTES.md  README.md  contributing.md  getting-started.md
docs/architecture/: README.md  code-generation.md  event-bus.md  overview.md  project-model.md  widget-node-tree.md
docs/history/: README.md
docs/plans/: behavior_sidebar.md  export_test_plan.md
docs/spec/: AI_CHEATSHEET.md  ARCHITECTURE.md  CONCEPTS.md  DATA_MODEL.md  EVENT_BUS.md  EXPORT.md  EXTENSION.md  WIDGETS.md  WINDOW_STYLE.md
docs/testing/: README.md  commands.md  inspectors_dialogs.md  layout.md  multi_document.md  project.md  properties.md  widgets.md  workspace.md
docs/tests/: assets_panel.md  fonts.md  icon_picker.md
docs/todo/: README.md  bugs.md  done.md  ideas.md  observations.md  reference.md  roadmap.md
docs/user-guide/: README.md  canvas-workspace.md  creating-project.md  exporting-code.md  interface-overview.md  properties-panel.md  saving-loading.md
docs/widgets/: README.md  adding-new-widget.md  ctk_button.md  ctk_check_box.md  ctk_combo_box.md  ctk_entry.md  ctk_frame.md  ctk_label.md  ctk_option_menu.md  ctk_progress_bar.md  ctk_radio_button.md  ctk_scrollable_frame.md  ctk_segmented_button.md  ctk_slider.md  ctk_switch.md  ctk_tabview.md  ctk_textbox.md
tests/: conftest.py  test_behavior_fields.py  test_circle_label_export.py  test_circular_progress.py  test_commands_handlers.py  test_cross_platform_baseline.py  test_event_bus.py  test_event_registry.py  test_exporter_default_skip.py  test_filtered_export_behavior_tree.py  test_history.py  test_label_export.py  test_logger.py  test_migrate_page_scripts.py  test_object_references.py  test_pack_balance.py  test_platform_compat.py  test_preview_python_executable.py  test_project_folder_inspect.py  test_project_folder_rename.py  test_script_paths.py  test_scripts.py  test_var_name_threading.py  test_variables.py  test_widget_default_names.py  test_widget_node.py
tools/: build_lucide_categories.py  check_cross_platform.py  color_swatches.py  cross_platform_baseline.json  ctk_button_qtdesigner_mock.py  ctk_button_spacing_playground.py  ctk_button_treeview_mock.py  gen_widgets_spec.py  inspect_ctk_widget.py  segment_values_dialog.py  test_geometry_layout.py  test_picker_buttons.py  text_editor_dialog.py
(+107 files in other folders)
